--- a/frontend/public/styles/style.css
+++ b/frontend/public/styles/style.css
@@ -764,6 +764,49 @@ html body {
   color: black !important;
   border: none;
 }
+.undernav .image-gallery {
+  display: flex;
+  min-width: 100%;
+  max-width: 100%;
+  min-height: 500px;
+  max-height: 500px;
+}
+@media screen and (min-width: 768px) {
+  .undernav .image-gallery {
+    min-height: 100%;
+    max-height: 100%;
+  }
+}
+.undernav .image-gallery .image-gallery-content, .undernav .image-gallery .image-gallery-slide-wrapper, .undernav .image-gallery .image-gallery-slide, .undernav .image-gallery .image-gallery-slides, .undernav .image-gallery .carousel_image {
+  display: flex;
+  min-width: 100%;
+  max-width: 100%;
+  min-height: 100%;
+  max-height: 100%;
+}
+.undernav .image-gallery .image-gallery-content img, .undernav .image-gallery .image-gallery-slide-wrapper img, .undernav .image-gallery .image-gallery-slide img, .undernav .image-gallery .image-gallery-slides img, .undernav .image-gallery .carousel_image img {
+  height: 100%;
+  width: 100%;
+}
+@media screen and (min-width: 992px) {
+  .undernav .image-gallery .image-gallery-content img, .undernav .image-gallery .image-gallery-slide-wrapper img, .undernav .image-gallery .image-gallery-slide img, .undernav .image-gallery .image-gallery-slides img, .undernav .image-gallery .carousel_image img {
+    height: 400px;
+    width: 65%;
+  }
+}
+.undernav .image-gallery .image-gallery-content .image-gallery-bullets-container, .undernav .image-gallery .image-gallery-slide-wrapper .image-gallery-bullets-container, .undernav .image-gallery .image-gallery-slide .image-gallery-bullets-container, .undernav .image-gallery .image-gallery-slides .image-gallery-bullets-container, .undernav .image-gallery .carousel_image .image-gallery-bullets-container {
+  display: none;
+}
+@media screen and (min-width: 992px) {
+  .undernav .image-gallery .image-gallery-content .image-gallery-bullets-container, .undernav .image-gallery .image-gallery-slide-wrapper .image-gallery-bullets-container, .undernav .image-gallery .image-gallery-slide .image-gallery-bullets-container, .undernav .image-gallery .image-gallery-slides .image-gallery-bullets-container, .undernav .image-gallery .carousel_image .image-gallery-bullets-container {
+    display: block;
+  }
+}
+@media screen and (min-width: 992px) {
+  .undernav .image-gallery .image-gallery-content, .undernav .image-gallery .image-gallery-slide-wrapper, .undernav .image-gallery .image-gallery-slide, .undernav .image-gallery .image-gallery-slides, .undernav .image-gallery .carousel_image {
+    display: block !important;
+  }
+}
 .undernav .image-gallery-description {
   background-color: rgba(0, 0, 0, 0.5);
   height: fit-content;
