--- a/frontend/src/scss/partials/_public_ingatlanCard.scss
+++ b/frontend/src/scss/partials/_public_ingatlanCard.scss
@@ -102,6 +102,7 @@
 
             & .card-body {
                 padding: 10px auto;
+                white-space: pre-line;
             }
         }
     }
