--- a/frontend/src/scss/partials/_public_navbar.scss
+++ b/frontend/src/scss/partials/_public_navbar.scss
@@ -98,7 +98,9 @@
             }
         }
 
-   
+        #myart {
+            color: #FF9166 !important;
+        }
 
         @media screen and (min-width: 992px) {
             padding: 0px;
@@ -119,9 +121,7 @@
         align-items: center;
         cursor: pointer;
 
-        &#myart {
-            color: #FF9166 !important;
-        }
+      
 
         &:hover {
             background-color: var(themes-public-navlinkhoveractive);
@@ -151,6 +151,8 @@
             padding: 5px !important;
         }
     }
+
+
 
     // .dropdown-toggle {
     //     white-space: nowrap;
