--- a/frontend/src/scss/styles.scss
+++ b/frontend/src/scss/styles.scss
@@ -4,6 +4,7 @@
 @forward 'partials/public_ingatlanCard';
 @forward 'partials/public_rolunk';
 @forward 'partials/public_kapcsolat';
+@forward 'partials/public_reklam';
 @forward 'partials/admin_navbar';
 @forward 'partials/admin_sidebar';
 @forward 'partials/public_footer';
